# Android-Surfacing

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
surfacing/: AndroidManifest.xml  CMakeLists.txt  build.gradle
surfacing/cpp/: MainActivity.cpp  MainActivity.h  guard.cpp  guard.h  jni.cpp  log.cpp  log.h
surfacing/java/online/adamek/sten/surfacing/: MainActivity.java
surfacing/res/layout/: activity_main.xml
surfacing/res/values/: colors.xml  strings.xml  styles.xml
